syntax = "proto3";

package api;

service EmployeeService {
  rpc CreateEmployee (EmployeeRequest) returns (EmployeeResponse) {}

  rpc GetEmployee (EmployeeFilter) returns (stream EmployeeRequest) {}
}

message EmployeeRequest {
  string id = 1;
  string name = 2;
  int32 age = 3;
  string address = 4;
  double salary = 5;
  string createdAt = 6;
  string updatedAt = 7;
  int32 version = 8;
}

message EmployeeResponse {
  string id = 1;
  bool success = 2;
}

message EmployeeFilter {
  string key = 1;
}
